fix weather symbols being truncated

--- a/.config/ironbar/style.css
+++ b/.config/ironbar/style.css
@@ -66,7 +66,7 @@
 }
 
 .weather {
-    padding-left: 1em;
+    padding: 0 2em 0 1em;
 }
 
 .workspaces .item.visible {
